daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: nginx-daemon

spec:
  selector:
    matchLabels:
      app: nginx-daemon

  template:
    metadata:
      labels:
        app: nginx-daemon

    spec:
      containers:
        - name: nginx
          image: nginx:1.27

          ports:
            - containerPort: 80
