statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: nginx-stateful-storage

spec:
  serviceName: nginx-headless
  replicas: 2

  selector:
    matchLabels:
      app: nginx-stateful-storage

  template:
    metadata:
      labels:
        app: nginx-stateful-storage

    spec:
      containers:
        - name: nginx
          image: nginx:1.27

          volumeMounts:
            - name: nginx-data
              mountPath: /data

  volumeClaimTemplates:
    - metadata:
        name: nginx-data

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
