headless.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-headless

spec:
  clusterIP: None

  selector:
    app: nginx-stateful-storage

  ports:
    - port: 80
      targetPort: 80
